bindings/fortran/cdef.f90


! Function "chrp_topology_angles_count", at bindings/c/chemharp.h:362
function chrp_topology_angles_count_c(topology, nangles) bind(C, name="chrp_topology_angles_count")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_angles_count_c
    type(c_ptr) :: topology
    integer(kind=c_size_t) :: nangles
end function

! Function "chrp_topology_dihedrals_count", at bindings/c/chemharp.h:370
function chrp_topology_dihedrals_count_c(topology, ndihedrals) bind(C, name="chrp_topology_dihedrals_count")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_dihedrals_count_c
    type(c_ptr) :: topology
    integer(kind=c_size_t) :: ndihedrals
end function

! Function "chrp_topology_bonds", at bindings/c/chemharp.h:380
function chrp_topology_bonds_c(topology, data, nbonds) bind(C, name="chrp_topology_bonds")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_bonds_c
    type(c_ptr) :: topology
    integer(kind=c_size_t), dimension(:, :) :: data
    integer(kind=c_size_t), value :: nbonds
end function

! Function "chrp_topology_angles", at bindings/c/chemharp.h:390
function chrp_topology_angles_c(topology, data, nangles) bind(C, name="chrp_topology_angles")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_angles_c
    type(c_ptr) :: topology
    integer(kind=c_size_t), dimension(:, :) :: data
    integer(kind=c_size_t), value :: nangles
end function

! Function "chrp_topology_dihedrals", at bindings/c/chemharp.h:400
function chrp_topology_dihedrals_c(topology, data, ndihedrals) bind(C, name="chrp_topology_dihedrals")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_dihedrals_c
    type(c_ptr) :: topology
    integer(kind=c_size_t), dimension(:, :) :: data
    integer(kind=c_size_t), value :: ndihedrals
end function

! Function "chrp_topology_add_bond", at bindings/c/chemharp.h:408
function chrp_topology_add_bond_c(topology, i, j) bind(C, name="chrp_topology_add_bond")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_add_bond_c
    type(c_ptr) :: topology
    integer(kind=c_size_t), value :: i
    integer(kind=c_size_t), value :: j
end function

! Function "chrp_topology_remove_bond", at bindings/c/chemharp.h:416
function chrp_topology_remove_bond_c(topology, i, j) bind(C, name="chrp_topology_remove_bond")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_remove_bond_c
    type(c_ptr) :: topology
    integer(kind=c_size_t), value :: i
    integer(kind=c_size_t), value :: j
end function

! Function "chrp_topology_free", at bindings/c/chemharp.h:423
function chrp_topology_free_c(topology) bind(C, name="chrp_topology_free")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_topology_free_c
    type(c_ptr) :: topology
end function

! Function "chrp_atom", at bindings/c/chemharp.h:432
function chrp_atom_c(frame, idx) bind(C, name="chrp_atom")
    use iso_c_binding
    implicit none
    type(c_ptr) :: chrp_atom_c
    type(c_ptr) :: frame
    integer(kind=c_size_t), value :: idx
end function

! Function "chrp_topology_atom", at bindings/c/chemharp.h:440
function chrp_topology_atom_c(topology, idx) bind(C, name="chrp_topology_atom")
    use iso_c_binding
    implicit none
    type(c_ptr) :: chrp_topology_atom_c
    type(c_ptr) :: topology
    integer(kind=c_size_t), value :: idx
end function

! Function "chrp_atom_mass", at bindings/c/chemharp.h:450
function chrp_atom_mass_c(atom, mass) bind(C, name="chrp_atom_mass")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_mass_c
    type(c_ptr), intent(in) :: atom
    real(kind=c_float) :: mass
end function

! Function "chrp_atom_mass_set", at bindings/c/chemharp.h:457
function chrp_atom_mass_set_c(atom, mass) bind(C, name="chrp_atom_mass_set")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_mass_set_c
    type(c_ptr) :: atom
    real(kind=c_float), value :: mass
end function

! Function "chrp_atom_charge", at bindings/c/chemharp.h:464
function chrp_atom_charge_c(atom, charge) bind(C, name="chrp_atom_charge")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_charge_c
    type(c_ptr), intent(in) :: atom
    real(kind=c_float) :: charge
end function

! Function "chrp_atom_charge_set", at bindings/c/chemharp.h:471
function chrp_atom_charge_set_c(atom, charge) bind(C, name="chrp_atom_charge_set")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_charge_set_c
    type(c_ptr) :: atom
    real(kind=c_float), value :: charge
end function

! Function "chrp_atom_name", at bindings/c/chemharp.h:479
function chrp_atom_name_c(atom, name, buffsize) bind(C, name="chrp_atom_name")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_name_c
    type(c_ptr), intent(in) :: atom
    character(len=1, kind=c_char), dimension(:) :: name
    integer(kind=c_size_t), value :: buffsize
end function

! Function "chrp_atom_name_set", at bindings/c/chemharp.h:486
function chrp_atom_name_set_c(atom, name) bind(C, name="chrp_atom_name_set")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_name_set_c
    type(c_ptr) :: atom
    character(len=1, kind=c_char), dimension(:), intent(in) :: name
end function

! Function "chrp_atom_free", at bindings/c/chemharp.h:493
function chrp_atom_free_c(atom) bind(C, name="chrp_atom_free")
    use iso_c_binding
    implicit none
    integer(c_int) :: chrp_atom_free_c
    type(c_ptr) :: atom
end function

end interface
